--- a/aplikacja/style.css
+++ b/aplikacja/style.css
@@ -38,6 +38,15 @@ html, body {
 	margin-right: auto;
 }
 
+#LOGOWANIE{
+	width: 200px;
+	float: center;
+	overflow: hidden;
+	background-color: #fff;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 
 ul {
     list-style-type: none;
@@ -111,9 +120,6 @@ img.aktualnosci {
 	text-shadow: 1px 0px red;	
 }
 
-.srodek{
-	float:center;
-}
 
 h2.lokal{
 	margin-left:10px;
@@ -136,4 +142,9 @@ width:300px;
   border: 2px solid #ff65ff;
   border-radius: 5px;
   padding: 1ex;
+}
+.logowanie{
+	border: 2px line #999;
+	border-radius: 10px;
+	-webkit-appearance: none;
 }
