--- a/aplikacja/style.css
+++ b/aplikacja/style.css
@@ -38,15 +38,6 @@ html, body {
 	margin-right: auto;
 }
 
-#LOGOWANIE{
-	width: 200px;
-	float: center;
-	overflow: hidden;
-	background-color: #fff;
-	margin-left: auto;
-	margin-right: auto;
-}
-
 
 ul {
     list-style-type: none;
@@ -120,6 +111,9 @@ img.aktualnosci {
 	text-shadow: 1px 0px red;	
 }
 
+.srodek{
+	float:center;
+}
 
 h2.lokal{
 	margin-left:10px;
@@ -143,8 +137,45 @@ width:300px;
   border-radius: 5px;
   padding: 1ex;
 }
-.logowanie{
-	border: 2px line #999;
-	border-radius: 10px;
-	-webkit-appearance: none;
+
+#bar
+{
+	background-color: lightgrey;
+	width: 96.7%;
+	min-height:30px;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	border: 2px solid #666666;
+	padding: 15px 10px 5px 20px;
+}
+
+.optionbar
+{
+	
+	width: 32.7%;
+	border: 2px solid #666666;
+	text-align: center;
+	float:left;
+}
+
+.wpis
+{
+	width: 96.7%;
+	min-height:25px;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	border: 2px solid #666666;
+	padding: 5px 10px 5px 20px;
+}
+
+.pole
+{
+	width: 32.7%;
+	min-height:10px;
+	border: 2px solid #666666;
+	text-align: center;
+	float:left;
+	padding: 2px 0px 0px 0px;
 }
