--- a/aplikacja/style.css
+++ b/aplikacja/style.css
@@ -104,6 +104,13 @@ img.aktualnosci {
     margin-right: auto;
 	float: center;
 }
+#LOGOWANIE{
+	display: block;
+	margin-left: auto;
+    margin-right: auto;
+	float: center;
+	width:25%;
+}
 
 
 .aktualnosci_naglowek{
@@ -111,9 +118,6 @@ img.aktualnosci {
 	text-shadow: 1px 0px red;	
 }
 
-.srodek{
-	float:center;
-}
 
 h2.lokal{
 	margin-left:10px;
@@ -141,7 +145,7 @@ width:300px;
 #bar
 {
 	background-color: lightgrey;
-	width: 96.7%;
+	width: 987px;
 	min-height:30px;
 	margin-left: auto;
 	margin-right: auto;
@@ -150,19 +154,44 @@ width:300px;
 	padding: 15px 10px 5px 20px;
 }
 
-.optionbar
+.optionbar-nazwa
 {
 	
-	width: 32.7%;
+	width: 30%;
+	border: 2px solid #666666;
+	text-align: center;
+	float:left;
+}
+.optionbar-cena
+{
+	
+	width: 20%;
+	border: 2px solid #666666;
+	text-align: center;
+	float:left;
+}
+.optionbar-ilosc
+{
+	
+	width: 15%;
+	border: 2px solid #666666;
+	text-align: center;
+	float:left;
+}
+.optionbar-koszyk
+{
+	
+	width: 15%;
 	border: 2px solid #666666;
 	text-align: center;
 	float:left;
 }
 
+
 .wpis
 {
-	width: 96.7%;
-	min-height:25px;
+	width: 987px;
+	min-height:35px;
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
@@ -172,10 +201,50 @@ width:300px;
 
 .pole
 {
-	width: 32.7%;
-	min-height:10px;
+	width: 19%;
+	min-height:30px;
 	border: 2px solid #666666;
 	text-align: center;
 	float:left;
 	padding: 2px 0px 0px 0px;
+}
+.ilosc
+{
+	width: 15%;
+	min-height:30px;
+	border: 2px solid #666666;
+	text-align: center;
+	float:left;
+	padding: 2px 0px 0px 0px;
+	
+}
+.nazwa
+{
+	width: 30%;
+	min-height:30px;
+	border: 2px solid #666666;
+	text-align: center;
+	float:left;
+	padding: 2px 0px 0px 0px;
+	
+}
+.cena
+{
+	width: 20%;
+	min-height:30px;
+	border: 2px solid #666666;
+	text-align: center;
+	float:left;
+	padding: 2px 0px 0px 0px;
+	
+}
+.koszyk
+{
+	width: 15%;
+	min-height:30px;
+	border: 2px solid #666666;
+	text-align: center;
+	float:left;
+	padding: 2px 0px 0px 0px;
+	
 }
