--- a/aplikacja/style.css
+++ b/aplikacja/style.css
@@ -249,4 +249,25 @@ width:300px;
 	
 }
 .invisible
+{}
+
+.r15procent
 {
+	width: 15%;
+	min-height:30px;
+	border: 2px solid #666666;
+	text-align: center;
+	float:left;
+	padding: 2px 0px 0px 0px;
+}
+
+.r17procent
+{
+	width: 17.5%;
+	min-height:30px;
+	border: 2px solid #666666;
+	text-align: center;
+	float:left;
+	padding: 2px 0px 0px 0px;
+}
+
