--- a/aplikacja/style.css
+++ b/aplikacja/style.css
@@ -324,3 +324,19 @@ width:300px;
 	padding: 2px 0px 0px 0px;
 }
 
+#wyloguj
+{
+	width: 100px;
+	height: 20px;
+	border: 2px dashed white;
+	text-align: center;
+	color: white;
+	text-decoration: none;
+	background-color: #666666;
+}
+
+#wyloguj:hover
+{
+	background-color: #666688;
+}
+
