--- a/aplikacja/style.css
+++ b/aplikacja/style.css
@@ -454,3 +454,24 @@ width:300px;
 	margin-top:6px;
 	float:left;
 }
+
+.r15procenta
+{
+	width: 15%;
+	min-height:20px;
+	border: 2px solid #666666;
+	text-align: center;
+	float:left;
+	padding: 2px 0px 0px 0px;
+}
+
+.r17procenta
+{
+	width: 17.5%;
+	min-height:20px;
+	border: 2px solid #666666;
+	text-align: center;
+	float:left;
+	padding: 2px 0px 0px 0px;
+}
+
